altered method signatures to share the same parameters and fixed interval fetching